@@ -656,6 +656,13 @@ void H2CommTask<T>::sendResponse(std::unique_ptr<GeneralResponse> res,
 
   auto* tmp = static_cast<H2Response*>(res.get());
 
+  // handle response code 204 No Content
+  if (tmp->responseCode() == rest::ResponseCode::NO_CONTENT) {
+    TRI_ASSERT(tmp->isResponseEmpty())
+        << "response code 204 requires body to be empty";
+    tmp->clearBody();  // in non maintainer build clear the body
+  }
+
   if (Logger::isEnabled(LogLevel::TRACE, Logger::REQUESTS) &&
       Logger::logRequestParameters()) {
     auto& bodyBuf = tmp->body();
